--- a/*/*.ipynb
+++ b/*/*.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import some_non_existent_module\n"
+        "print(\"Hello, world!\")"
       ],
       "outputs": [],
       "execution_count": null
@@ -15,7 +15,6 @@
       "display_name": "Python 3",
       "language": "python",
       "name": "python3"
-    },
     "language_info": {
       "name": "python",
       "version": "3.9.0"
