--- a/New notebook (8).ipynb
+++ b/New notebook (8).ipynb
@@ -10,7 +10,7 @@
    "metadata":{
     "datalore":{
      "node_id":"zEFARKpigNK7a7Uq17i2I0",
-     "type":"CODE",
+     "type":"codeERR",
      "hide_input_from_viewers":true,
      "hide_output_from_viewers":true
     }
