--- a/New notebook (8).ipynb
+++ b/New notebook (8).ipynb
@@ -1,62 +1,16 @@
 {
- "cells":[
+  "cells":[
   {
-   "cell_type":"codeERR",
+   "cell_type":"codeERROR",
    "source":[
-    "test = 4"
+    "\"This notebook was imported\""
    ],
-   "execution_count":11,
-   "outputs":[],
-   "metadata":{
-    "datalore":{
-     "node_id":"zEFARKpigNK7a7Uq17i2I0",
-     "type":"codeERR",
-     "hide_input_from_viewers":true,
-     "hide_output_from_viewers":true
-    }
-   }
-  },
-  {
-   "cell_type":"code",
-   "source":[
-    "test = 4"
-   ],
-   "execution_count":20,
-   "outputs":[],
-   "metadata":{
-    "datalore":{
-     "node_id":"hfS1bVWrnDMBB5Of3qGvzB",
-     "type":"CONTROL",
-     "hide_input_from_viewers":true,
-     "hide_output_from_viewers":true,
-     "controls_state":[
-      {
-       "type":"SLIDER",
-       "label":"Slider 1",
-       "variable":"test",
-       "value":"4",
-       "min":"0",
-       "max":"10",
-       "step":"1",
-       "minExpression":"0",
-       "maxExpression":"10",
-       "stepExpression":"1"
-      }
-     ]
-    }
-   }
-  },
-  {
-   "cell_type":"codeERR",
-   "source":[
-    "test"
-   ],
-   "execution_count":17,
+   "execution_count":1,
    "outputs":[
     {
      "data":{
       "text\/plain":[
-       "6"
+       "'This notebook was imported'"
       ]
      },
      "metadata":{},
@@ -65,52 +19,8 @@
    ],
    "metadata":{
     "datalore":{
-     "node_id":"4BRvgFeT8RdYUrzElcGBVh",
-     "type":"CODE",
-     "hide_input_from_viewers":true,
-     "hide_output_from_viewers":true
-    }
-   }
-  },
-  {
-   "cell_type":"code",
-   "source":[],
-   "execution_count":null,
-   "outputs":[],
-   "metadata":{
-    "datalore":{
-     "node_id":"FCt4O2nsGMG8eYn6aOHBH9",
-     "type":"CODE",
-     "hide_input_from_viewers":true,
-     "hide_output_from_viewers":true
-    }
-   }
-  },
-  {
-   "cell_type":"code",
-   "source":[],
-   "execution_count":null,
-   "outputs":[],
-   "metadata":{
-    "datalore":{
-     "node_id":"KUKKso62gA5YZ5WPsTR74K",
-     "type":"CODE",
-     "hide_input_from_viewers":true,
-     "hide_output_from_viewers":true
-    }
-   }
-  },
-  {
-   "cell_type":"code",
-   "source":[
-    "test = 6"
-   ],
-   "execution_count":5,
-   "outputs":[],
-   "metadata":{
-    "datalore":{
-     "node_id":"gAJfX8ysE1948YioZtS3BH",
-     "type":"CODE",
+     "node_id":"GHq4iASjdBcx41ZYbDsE10",
+     "type":"codeERROR",
      "hide_input_from_viewers":true,
      "hide_output_from_viewers":true
     }
@@ -134,4 +44,3 @@
  },
  "nbformat":4,
  "nbformat_minor":4
-}
